# Marketly

./: .gitignore  AGENTS.md  LICENSE  README.md  docker-compose.yml  requirements.txt
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0bf90a4f98ad_create_saved_searches.py  1e4b8c7d9f2a_add_facebook_helper_sync_tables.py  2c6d4c7d1f31_add_user_location_preferences.py  5b0d7df66d4e_add_saved_search_alert_attempt_fields.py  6c250266867a_create_saved_searches.py  8d4e7b1a9c2f_reconcile_saved_search_user_id_type.py  9f6c3a12b7d4_add_saved_search_alert_baseline_metadata.py  a7c9f2d4e6b1_add_alert_source_error_metadata.py  c5df1a5a0d13_add_ai_insights_alert_tables.py  da1f5e25625d_add_user_id_column_to_saved_searches.py  f0b7e9d32c17_create_user_facebook_credentials.py
backend/app/: auth.py  db.py  main.py
backend/app/connectors/: __init__.py  (+5 more)
backend/marketly_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/secrets/: fb_cookies.json
backend/tests/: conftest.py  test_ai_endpoints.py  test_alerts.py  test_connector_snippets.py  test_facebook_byoc_endpoints.py  test_facebook_connector.py  test_facebook_credentials.py  test_facebook_normalizer.py  test_facebook_sync.py  test_facebook_unified_connector.py  test_gemini_client.py  test_listing_insights.py  test_location_resolver.py  test_migrations.py  test_rate_limit.py  test_response_cache.py  test_saved_search_rate_limit.py  test_search.py  test_search_service.py  test_ttl_cache.py  utils.py
(+90 files in other folders)
