[project]
name = "marketly-backend"
version = "0.1.0"
description = "Marketly MVP backend (FastAPI)"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "httpx>=0.27",
  "selectolax>=0.3.21",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "psycopg2-binary>=2.9",
  "beautifulsoup4>=4.12.3",
  "lxml>=5.1.0",
  "requests>=2.31.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
  "ruff>=0.4",
]

[tool.ruff]
line-length = 100

[tool.setuptools]
packages = ["app"]

